# pdd

./: .cloud-image-hash  .codex_design_1406.md  .dockerignore  .env.e2e.template  .env.example  .envrc  .gitattributes  .gitignore  .infisical.json  .mcp.json  .pdd_gh_token  .pdd_one_session_progress_agentic_bug_orchestrator  .pddignore  .pddrc  .sync-config.yml  AGENTS.md  AUTOMATION_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT_PROMPTS_COLLECTION.md  Dockerfile.cloud-test  GEMINI.md  ISSUE_COMMENT.md  LICENSE  MANIFEST.in  Makefile  Makefile.e2e-connect  Makefile.test-staging  Makefile.test-staging-bk  ONBOARDING.md  PDD-SETUP-SUMMARY.txt  PDD_GAP_ANALYSIS.md  PDD_PROMPT_IMPROVEMENT_GUIDE.md  PR_DETAILS.md  PR_description.md  QUICK_START.md  README-ADVANCED-CONFIGURATION.md  README-CLOUD.md  README-COMMANDS.md  (+143 more)
.claude/: settings.local.json
.gh-wrapper/: gh
.github/: dependabot.yml
.pdd/: arch-waivers.json  expected-managed.json  llm_model.csv  repository-id  repository-sync-classifications.json  sync-ownership.json  verification-profile-rotations.json  verification-profiles.json
benchmarks/: PR.md  README.md
context/: DSPy_example.py  README.md  __init__example.py  _keyring_timeout_example.py  addition_of_time_param.prompt  agentic_architecture_example.py  agentic_architecture_orchestrator_example.py  agentic_bug_example.py  agentic_bug_orchestrator_example.py  agentic_change_example.py  agentic_change_orchestrator_example.py  agentic_checkup_example.py  agentic_checkup_orchestrator_example.py  agentic_common_example.py  agentic_crash_example.py  agentic_e2e_fix_example.py  agentic_e2e_fix_orchestrator_example.py  agentic_fix_example.py  agentic_langtest_example.py  agentic_multishot_example.py  agentic_reviewer_example.py  agentic_split_example.py  agentic_split_orchestrator_example.py  agentic_sync_example.py  agentic_sync_runner_example.py  agentic_test_example.py  agentic_test_generate_example.py  agentic_test_orchestrator_example.py  agentic_update_example.py  agentic_verify_example.py  analysis_example.py  anthropic_counter_example.py  anthropic_thinking_test.py  anthropic_tool_example.py  api_contract_slicer_example.py  api_key_scanner_example.py  api_key_validator_example.py  architecture_registry_example.py  architecture_sync_example.py  auth_service_example.py  (+203 more)
data/: language_format.csv  llm_model.csv
demo/: README.md  etlpipeline.py  etlpipeline_example.py  etlpipeline_python.prompt  (+4 more)
examples/edit_file_tool_example/: .pddrc  EDIT_FILE_TOOL_README.md  Makefile  README.md  debug_exact_issue.py  insert_python.txt  project_dependencies.csv  pyproject.toml
examples/edit_file_tool_example/Scripts/: PDD_workflow.py  all_components.py  component_delete.py  pdd_with_infisical.sh  prompts_script.py  setup_env_from_infisical.sh
examples/edit_file_tool_example/context/: example.prompt  pdd_preamble.prompt  test.prompt
examples/edit_file_tool_example/edit_file_tool/: __init__.py  cache_manager.py  claude_api.py  cli.py  core.py  editor_tool.py  file_io.py  instruction_parser.py  think_tool.py  utils.py
examples/edit_file_tool_example/examples/: cache_manager_example.py  claude_api_example.py  cli_example.py  core_example.py  editor_tool_example.py  file_io_example.py  instruction_parser_example.py  think_tool_example.py  utils_example.py
examples/edit_file_tool_example/examples/examples/temp_editor_tool_demo/my_project/: main.py
examples/edit_file_tool_example/pdd/: architecture.json
examples/edit_file_tool_example/prompts/: cache_manager_python.prompt  claude_api_python.prompt  cli_python.prompt  core_python.prompt  editor_tool_python.prompt  file_io_python.prompt  instruction_parser_python.prompt  pyproject_TOML.prompt  think_tool_python.prompt  utils_python.prompt
examples/edit_file_tool_example/prompts/script_prompts/: Makefile_makefile.prompt  PDD_workflow_python.prompt  all_components_python.prompt  architecture_json.prompt  component_delete_python.prompt  modify_template_prompt.prompt  pdd_with_infisical_shell.prompt  prompts_script_python.prompt  setup_env_from_infisical_shell.prompt  template_from_json_prompt.prompt
examples/edit_file_tool_example/prompts/template_prompts/: cache_manager_python_prompt.prompt  claude_api_python_prompt.prompt  cli_python_prompt.prompt  core_python_prompt.prompt  editor_tool_python_prompt.prompt  file_io_python_prompt.prompt  instruction_parser_python_prompt.prompt  pyproject.toml_python_prompt.prompt  think_tool_python_prompt.prompt  utils_python_prompt.prompt
examples/edit_file_tool_example/tests/: __init__.py  test_cache_manager.py  test_claude_api.py  test_cli.py  test_core.py  test_editor_tool.py  test_file_io.py  test_instruction_parser.py  test_think_tool.py  test_utils.py
examples/template_example/: .gitignore  .pddrc  API_KEY_SETUP.md  Makefile  README.md  architecture.json  architecture_diagram.html  example.py  project_dependencies.csv  pyproject.toml
examples/template_example/.pdd/meta/: cache_manager_utility_python.json  cli_python.json  cost_tracker_utility_python.json  pyproject_toml.json  think_tool_capability_python.json
examples/template_example/data/: llm_model.csv
examples/template_example/prompts/: __init___Python.prompt  cache_manager_utility_Python.prompt  cli_Python.prompt  core_python.prompt  cost_tracker_utility_Python.prompt  pyproject_TOML.prompt  think_tool_capability_Python.prompt
examples/template_example/prompts/architecture/: architecture_json.prompt
examples/template_example/src/edit_file_tool/: __init__.py  cache_manager_utility.py  cli.py  core.py  cost_tracker_utility.py  think_tool_capability.py
examples/template_example/src/examples/: __init___example.py  cache_manager_utility_example.py  cli_example.py  core_example.py  cost_tracker_utility_example.py  think_tool_capability_example.py
examples/template_example/src/examples/generated_xml/: example_mod.xml
examples/template_example/src/tests/: test___init__.py  test_cache_manager_utility.py  test_cli.py  test_core.py  test_cost_tracker_utility.py  test_think_tool_capability.py
(+8947 files in other folders)
