[build-system]
requires = [
    "setuptools>=43.0.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "pdd-cli"
version = "0.0.20"
description = "PDD (Prompt-Driven Development) Command Line Interface"
readme = {file = "pypi_description.rst", content-type = "text/x-rst"}
authors = [
    { name = "Greg Tanaka"}, {email = "glt@alumni.caltech.edu" }
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
keywords = [
    "prompt-driven development",
    "code generation",
    "AI",
    "LLM",
    "unit testing",
    "software development"
]
dependencies = [
    "GitPython==3.1.44",
    "Requests==2.32.3",
    "click==8.1.7",
    "keyring==25.6.0",
    "langchain==0.3.19",
    "langchain_anthropic==0.3.8",
    "langchain_community==0.3.18",
    "langchain_core==0.3.40",
    "langchain_fireworks==0.2.7",
    "langchain_google_genai==2.0.11",
    "langchain_google_vertexai==2.0.13",
    "langchain_groq==0.2.4",
    "langchain_ollama==0.2.3",
    "langchain_openai==0.3.7",
    "langchain_together==0.3.0",
    "pandas==2.2.3",
    "pydantic==2.10.6",
    "rich==13.9.4",
    "semver==3.0.2",
    "setuptools==75.1.0",
    "python-Levenshtein",
]
requires-python = ">=3.11"

[project.urls]
Homepage = "https://github.com/gltanaka/pdd"
Repository = "https://github.com/gltanaka/pdd.git"
Issue-Tracker = "https://github.com/gltanaka/pdd/issues"

[project.scripts]
pdd = "pdd.cli:cli"

[tool.setuptools.packages.find]
include = ["pdd*"]

[tool.setuptools.package-data]
"pdd" = [
    "prompts/*_LLM.prompt",
    "data/*",
    "*.zsh",
    "*.fish",
    "*.sh"
]
