[build-system]
requires = [
    "setuptools>=43.0.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "pdd-cli"
version = "0.0.162"
description = "PDD (Prompt-Driven Development) Command Line Interface"
readme = {file = "pypi_description.rst", content-type = "text/x-rst"}
authors = [
    { name = "Greg Tanaka"}, {email = "glt@alumni.caltech.edu" }
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
keywords = [
    "prompt-driven development",
    "code generation",
    "AI",
    "LLM",
    "unit testing",
    "software development"
]
dependencies = [
    "GitPython==3.1.44",
    "Requests==2.32.4",
    "aiofiles==24.1.0",
    "click==8.1.7",
    "firecrawl-py==2.5.3",
    "firebase_admin==6.6.0",
    "keyring==25.6.0",
    "nest_asyncio==1.6.0",
    "pandas==2.2.3",
    "psutil>=7.0.0",
    "pydantic==2.11.4",
    "litellm[caching]>=1.80.0",
    "lxml>=5.0.0",
    "rich==14.0.0",
    "semver==3.0.2",
    "setuptools",
    "pytest==8.3.5",
    "pytest-cov==5.0.0",
    "boto3==1.35.99",
    "google-cloud-aiplatform>=1.3",
    "openai>=1.99.5",
    "pillow-heif==1.1.1",
    "Pillow==12.0.0",
    "textual",
    "python-dotenv==1.1.0",
    "PyYAML==6.0.1",
    "jsonschema==4.23.0",
    "z3-solver==4.14.1.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=13.0",
    "watchdog>=4.0.0",
    "tiktoken>=0.7.0"]
requires-python = ">=3.12"

[project.urls]
Homepage = "https://github.com/promptdriven/pdd.git"
Repository = "https://github.com/promptdriven/pdd.git"
Issue-Tracker = "https://github.com/promptdriven/pdd/issues"

[project.scripts]
pdd = "pdd.cli:cli"

[tool.setuptools.packages.find]
include = ["pdd*"]

[tool.setuptools.package-data]
"pdd" = [
    "prompts/*_LLM.prompt",
    "templates/**",
    "data/*",
    "docs/prompting_guide.md",
    "mcp_config.json",
    "*.zsh",
    "*.fish",
    "*.sh",
    "frontend/dist/**",
    "frontend/dist/*"
]

[project.optional-dependencies]
dev = [
    "commitizen",
    "pytest-cov",
    "pytest-testmon",
    "pytest-xdist",
    "pytest-mock",
    "pytest-asyncio",
    "build",
    "twine",
    "httpx==0.28.1"
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
markers = [
    "real: mark a test as requiring real resources (e.g. API calls)",
    "integration: mark a test as an integration test (makes real API calls, costs money)",
    "slow: mark a test as slow-running",
    "e2e: mark a test as E2E test (uses real LLM calls, costs money, runs slowly)",
]
filterwarnings = [
    "ignore:.*Pydantic V1 style.*deprecated.*",
    "ignore:.*Accessing the 'model_fields' attribute on the instance is deprecated.*",
    "ignore:datetime\\.datetime\\.utcnow\\(\\) is deprecated:DeprecationWarning:botocore\\.auth.*",
    "ignore::UserWarning:pydantic.main",
    "ignore:Use 'content=<\\.\\.\\.>' to upload raw bytes/text content:DeprecationWarning:httpx._models",
    "ignore:Unknown config option.*:pytest.PytestConfigWarning",
    "ignore:Support for class-based.*config.*is deprecated:DeprecationWarning",
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.0.162"
tag_format = "v$version"
version_files = [
    "pyproject.toml:version",
    "pdd/__init__.py:__version__",
    "README.md:Current version: (.*?)$",
    "README.md:https://img.shields.io/badge/pdd--cli-v(.*?)-blue",
    "pdd/pdd_completion.sh:# Version: (.*?)",
    "pypi_description.rst:.. image:: https://img.shields.io/badge/pdd--cli-v(.*?)-blue",
    "pypi_description.rst:You'll see the current PDD version \\(e\\.g\\., (.*?)\\)\\."
]
changelog_file = "CHANGELOG.md"
update_changelog_on_bump = true
