[build-system]
requires = [
    "setuptools>=64",
    "setuptools-scm>=8",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "pdd-cli"
dynamic = ["version"]
description = "PDD (Prompt-Driven Development) Command Line Interface"
readme = {file = "pypi_description.rst", content-type = "text/x-rst"}
authors = [
    { name = "Greg Tanaka"}, {email = "glt@alumni.caltech.edu" }
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
keywords = [
    "prompt-driven development",
    "code generation",
    "AI",
    "LLM",
    "unit testing",
    "software development"
]
dependencies = [
    "GitPython==3.1.50",
    "Requests==2.34.2",
    "aiofiles==25.1.0",
    "click==8.4.1",
    "firecrawl-py==4.28.0",
    "firebase_admin==7.4.0",
    "keyring==25.7.0",
    "nest_asyncio==1.6.0",
    "pandas==3.0.3",
    "psutil>=7.0.0",
    "pydantic==2.13.4",
    "litellm[caching]>=1.80.0,<=1.82.6",
    "lxml>=5.0.0",
    "rich==15.0.0",
    "semver==3.0.4",
    "setuptools",
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
    "boto3==1.43.14",
    "google-cloud-aiplatform>=1.3",
    "openai>=1.99.5",
    "pillow-heif==1.3.0",
    "Pillow==12.2.0",
    "textual",
    "python-dotenv==1.2.2",
    "PyYAML==6.0.3",
    "jsonschema==4.26.0",
    "z3-solver==4.16.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=13.0",
    "watchdog>=4.0.0",
    "tiktoken>=0.7.0",
    "filelock>=3.12"]
requires-python = ">=3.12"

[project.urls]
Homepage = "https://github.com/promptdriven/pdd.git"
Repository = "https://github.com/promptdriven/pdd.git"
Issue-Tracker = "https://github.com/promptdriven/pdd/issues"

[project.scripts]
pdd = "pdd.cli:cli"

[tool.setuptools]
packages = ["pdd", "pdd.commands", "pdd.core", "pdd.server", "pdd.server.routes"]

[tool.setuptools.package-data]
"pdd" = [
    "prompts/*_LLM.prompt",
    "templates/**",
    "data/*",
    "docs/prompting_guide.md",
    "mcp_config.json",
    "*.zsh",
    "*.fish",
    "*.sh",
    "frontend/dist/**",
    "frontend/dist/*"
]

[project.optional-dependencies]
dev = [
    "pytest-cov",
    "pytest-testmon",
    "pytest-xdist",
    "pytest-mock",
    "pytest-asyncio",
    "pytest-timeout",
    "build",
    "twine",
    "httpx==0.28.1"
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
timeout = 300
addopts = "--strict-markers --strict-config"
markers = [
    "real: mark a test as requiring real resources (e.g. API calls)",
    "integration: mark a test as an integration test (makes real API calls, costs money)",
    "slow: mark a test as slow-running",
    "e2e: mark a test as E2E test (uses real LLM calls, costs money, runs slowly)",
    "private_prompt: mark a test as exercising a private prompt fixture not shipped in the public repo",
    "uses_real_cli_detector: mark a test that exercises the real CLI detector instead of a stub",
]
filterwarnings = [
    "ignore:.*Pydantic V1 style.*deprecated.*",
    "ignore:.*Accessing the 'model_fields' attribute on the instance is deprecated.*",
    "ignore:datetime\\.datetime\\.utcnow\\(\\) is deprecated:DeprecationWarning:botocore\\.auth.*",
    "ignore::UserWarning:pydantic.main",
    "ignore:Use 'content=<\\.\\.\\.>' to upload raw bytes/text content:DeprecationWarning:httpx._models",
    "ignore:Support for class-based.*config.*is deprecated:DeprecationWarning",
]

[tool.setuptools_scm]
version_file = "pdd/_version.py"
tag_regex = "^v(?P<version>\\d+\\.\\d+\\.\\d+)$"
local_scheme = "no-local-version"

[tool.coverage.run]
# pytest-cov 7 removed its .pth-based subprocess coverage support. Use
# coverage.py 7.10+ patch directives so child processes (notably
# pdd/sync_orchestration.py's worker subprocesses) are still measured.
# Enabling the `subprocess` patch implicitly turns on `parallel = true`,
# producing per-process data files that `coverage combine` merges.
patch = ["subprocess"]

[tool.coverage.report]
# Mirrors the fallback excludes that pdd/sync_orchestration.py applies
# via a temporary --cov-config when no project coverage config is
# present. Declaring [tool.coverage.run] above flips _has_coverage_config
# to True, which suppresses that fallback, so we must restate the
# excludes here to keep `if __name__ == "__main__":` and `pragma: no
# cover` lines out of coverage measurement.
exclude_lines = [
    "if __name__ == .__main__.",
    "pragma: no cover",
]
